# ompi

ompi/mpi/c/: status_c2f.c  status_f2c.c
opal/mca/hwloc/base/: hwloc_base_util.c
opal/mca/mpool/base/: mpool_base_alloc.c
opal/mca/mpool/sicm/: Makefile.am  configure.m4  mpool_sicm.h  mpool_sicm_component.c  mpool_sicm_module.c
opal/mca/pmix/ext2x/: ext2x.c  ext2x_client.c
orte/mca/rmaps/explicit/: Makefile.am  help-orte-rmaps-explicit.txt  owner.txt  rmaps_explicit.c  rmaps_explicit.h  rmaps_explicit_component.c  rmaps_explicit_internals.c
orte/mca/rtc/hwloc/: rtc_hwloc.c
orte/orted/pmix/: pmix_server_register_fns.c
